# triAIge

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  default_10_20min.yaml  ppj - Shortcut.lnk  ppj.code-workspace
configs/data/: basic_multilabel.yaml  basic_multilabel_5.yaml  data.yaml  data_pretrain.yaml
configs/evaluation/: eval.yaml
configs/experiment/: experiment.yaml
configs/model/: de-novo-clean.yaml  tabfusion.yaml
configs/study/: 10min.yaml  20min.yaml  5min.yaml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
logging/archive/2024/01/23/: complete_1810.txt  complete_1822.txt  complete_1824.txt  complete_1825.txt  complete_1953.txt  complete_1954.txt  complete_1958.txt  complete_1959.txt  complete_2002.txt  complete_2004.txt  complete_2009.txt  complete_2012.txt  complete_2019.txt  complete_2025.txt  complete_2029.txt  complete_2030.txt  complete_2031.txt  complete_2032.txt  (+11 more)
reports/tables/: tableone.csv
src/: entrypoint.py  predict_model.py  tmp.py  train_model.py
src/common/: log_config.py
src/custom/: custom_fusion_model.py  tsai_custom.py
src/data/: creators.py  datasets.py  datasets_legacy.py  list_dumps.py  make_data.py  mapping.py  tools.py
src/data/tmp_del/: archive.py  dataloader.py
src/evaluation/: metrics.py
src/features/: fusion.py  fusion_legacy.py  loader.py
src/models/: fastbinary.py  ml_utils.py  modelcomponents.py  tree_utils.py
src/scripts/: pre_process.py  training.py  utils.py
src/visualization/: visualize.py
