[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.1"
description = "Prehospital prediction of surgical needs"
authors = [
  { name = "Andreas Skov Millarch", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
